--- a/_posts/2015-03-13-website.md
+++ b/_posts/2015-03-13-website.md
@@ -1,9 +1,12 @@
 ---
 layout: post
-title: I Made a Website!
+title: First Post
 ---
 
+I finally made a personal website!
 It's hosted on [github pages](https://pages.github.com/) using
 [Jekyll](http://jekyllrb.com) and [Hyde](https://github.com/poole/hyde).
 Source [here](https://github.com/mcogswell/mcogswell.github.com).
 
+Check out the [About Me](/about/) page and my
+[CV](/assets/cv_mar_2015.pdf).
