link to blog from teaser

--- a/_posts/2015-10-28-why_cat_1.md
+++ b/_posts/2015-10-28-why_cat_1.md
@@ -9,5 +9,5 @@ The next part should be coming out soonish and will come with
 some visualization code to help create it.
 Here's a teaser figure.
 
-![why cat part 1 teaser](/public/conv4_conv5.png)
+[![why cat part 1 teaser](/public/conv4_conv5.png)](/why_cat/)
 
