change feed blog title

--- a/_posts/2015-10-28-why_cat_1.md
+++ b/_posts/2015-10-28-why_cat_1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Blog Post About Visualizing CNNs
+title: Understanding CNNs Through Visualization
 ---
 
 I've been working on a blog post about how CNNs are visualized
