--- a/publications/publications.bib
+++ b/publications/publications.bib
@@ -14,3 +14,17 @@
   year={2014}
 }
 
+@article{lee2015m,
+  title={Why M Heads are Better than One: Training a Diverse Ensemble of Deep Networks},
+  author={Lee, Stefan and Purushwalkam, Senthil and Cogswell, Michael and Crandall, David and Batra, Dhruv},
+  journal={arXiv preprint arXiv:1511.06314},
+  year={2015}
+}
+
+@article{cogswell2015reducing,
+  title={Reducing Overfitting in Deep Networks by Decorrelating Representations},
+  author={Cogswell, Michael and Ahmed, Faruk and Girshick, Ross and Zitnick, Larry and Batra, Dhruv},
+  journal={Proceedings of the International Conference on Learning Representations (ICLR)},
+  year={2016}
+}
+
