basic refresh finished

--- a/publications/publications.bib
+++ b/publications/publications.bib
@@ -28,3 +28,9 @@
   year={2016}
 }
 
+@article{lee2016stochastic,
+  title={Stochastic Multiple Choice Learning for Training Diverse Deep Ensembles (Similar to M Heads)},
+  author={Lee, Stefan and Purushwalkam, Senthil and Cogswell, Michael and Ranjan, Viresh and Crandall, David and Batra, Dhruv},
+  journal={arXiv preprint arXiv:1606.07839},
+  year={2016}
+}
