restructure blog a bit

--- a/_posts/2015-10-28-why_cat_1.md
+++ b/_posts/2015-10-28-why_cat_1.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Understanding CNNs Through Visualization
+post_url: /why_cat/
 ---
 
 I've been working on a blog post about how CNNs are visualized
