--- a/_posts/2016-03-08-dropout.md
+++ b/_posts/2016-03-08-dropout.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Interpretations of Dropout
+published: false
 ---
 
 One of the first things you're likely to learn when you get in to deep learning
