--- a/_posts/2016-03-19-why_cat_2.md
+++ b/_posts/2016-03-19-why_cat_2.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Understanding CNNs Through Visualization (part 2)
+post_url: /why_cat_2/
 ---
 
 I've finally uploaded part 2 of my visualization blog, which visualizes relations
