fix broken links

--- a/_posts/2015-10-28-why_cat_1.md
+++ b/_posts/2015-10-28-why_cat_1.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: Understanding CNNs Through Visualization
-post_url: /why_cat/
+post_url: /blog/why_cat/
 ---
 
 I've been working on a blog post about how CNNs are visualized
-and you can see the first part [here](/why_cat/).
+and you can see the first part [here](/blog/why_cat/).
 The next part should be coming out soonish and will come with
 some visualization code to help create it.
 Here's a teaser figure.
 
-[![why cat part 1 teaser](/public/conv4_conv5.png){:class="img-responsive"}](/why_cat/)
+[![why cat part 1 teaser](/public/conv4_conv5.png){:class="img-responsive"}](/blog/why_cat/)
 
